[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "titan"
version = "0.1.0"
description = "TITAN"
license = { text = "CC-BY-NC-ND 4.0" }
requires-python = ">=3.10"
dependencies = [
    "torch==2.0.1",
    "torchvision==0.15.2",
    "timm==1.0.3",
    "einops==0.6.1",
    "einops-exts==0.0.4",
    "tqdm==4.66.6",
    "h5py==3.8.0",
    "transformers==4.46.0",
    "pandas==2.2.3",
    "scikit-learn==1.5.2",
]

[tool.setuptools.packages.find]
exclude = ["__dep__", "assets"]
